[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/pActor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6372, 10 )

[node name="Actor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
animation = "die"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_PlayerTimer_timeout"]
